added another ss to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ screenshots/contrast validator screenshots/button text against dark theme button
 screenshots/contrast validator screenshots/button text against save and new note button background.PNG
 screenshots/contrast validator screenshots/main text against main background.PNG
 screenshots/contrast validator screenshots/main text against menu background.PNG
+screenshots/git log screenshot.PNG
